--- a/pom.xml
+++ b/pom.xml
@@ -103,22 +103,19 @@
         </dependency>
 
     </dependencies>
-
-
     <distributionManagement>
         <repository>
-            <id>m2-releases</id>
-            <url>
-                http://maven-host:8081/nexus/content/repositories/releases/
-            </url>
+            <id>MyReleasesNexus</id>
+            <name>Nexus Releases Repository</name>
+            <url>http://122.51.227.25:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>m2-snapshots</id>
-            <name>nexus snapshots</name>
-            <url>http://maven-host:8081/nexus/content/repositories/snapshots/</url>
+            <id>MySnapshotNexus</id>
+            <name>Nexus snapshots Repository</name>
+            <url>http://122.51.227.25:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
-
     </distributionManagement>
+
 
     <build>
         <plugins>
